# RVAT-Re-dep

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-lock.json  LICENSE  README.md  calkit.yaml  dvc.yaml  environment-lock.yml  environment.yml  notebook.ipynb  plot.py  process.py  processing.py  pyproject.toml  requirements.txt  run.py  test.py
.dvc/: config
Config/: ggplot-mod.mplstyle
Config/Test plan/: Perf-0.5.csv  Perf-0.7.csv  Perf-0.9.csv  Perf-1.0.csv  Perf-1.1.csv  Perf-1.4.csv  Tare drag.csv  Wake-0.4.csv  Wake-0.6.csv  Wake-1.2.csv  Wake-1.4.csv
Data/: Raw.dvc
Data/Processed/: Perf-0.3.csv  Perf-0.4.csv  Perf-0.5.csv  Perf-0.6.csv  Perf-0.7.csv  Perf-0.8.csv  Perf-0.9.csv  Perf-1.0.csv  Perf-1.1.csv  Perf-1.2.csv  Perf-1.3.csv  Wake-0.4.csv  Wake-0.6.csv  Wake-0.8.csv  Wake-1.0.csv  Wake-1.2.csv
Documents/IPython notebooks/: uncertainty.ipynb
Modules/: plotting.py  processing.py  test.py  tests.py
Scripts/: process.py  test.py  upload.py
Test plan/: Perf-0.3.csv  Perf-0.4.csv  Perf-0.6.csv  Perf-0.8.csv  Perf-1.2.csv  Perf-1.3.csv  Perf-1.4.csv  Tare torque.csv  Wake-0.8.csv  Wake-1.0.csv
py_rvat_re_dep/: plotting.py
pyrvatrd/: __init__.py  plotting.py  processing.py  tests.py
